# disponent

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: basic.rs
src/: convert.rs  forward.rs  lib.rs
tests/: inherent_basic.rs  inherent_visibility.rs  ui.rs
tests/compile_fail/: arc_self.rs  arc_self.stderr  associated_const.rs  associated_const.stderr  associated_type.rs  associated_type.stderr  box_self.rs  box_self.stderr  combined_generics.rs  combined_generics.stderr  configure_on_trait.rs  configure_on_trait.stderr  generic_clash.rs  generic_clash.stderr  inner_name_conflict.rs  inner_name_conflict.stderr  not_newtype_variant.rs  not_newtype_variant.stderr  remote_on_enum.rs  remote_on_enum.stderr  unknown_config.rs  unknown_config.stderr
tests/expand/: async_fn.rs  consume_self.rs  from_and_try_into.rs  generic_trait.rs  generic_trait_with_generic_method.rs  inherent_basic.rs  mut_self.rs  remote_trait.rs  remote_trait_impl.rs  trait_impl_async.rs  trait_impl_basic.rs  trait_impl_generic.rs
